Improve Hint and Solve action visibility and enabled state

Summary:
BUG: 357996

- Action visibility improvement because some actions not needed in specific modes
    - Enter new puzzle: 'Hint' and 'Solve' not visible
    - Play puzzle: 'Check' not visible
    - Start page: 'Hint', 'Solve' and 'Check' not visible

- For Bug 357996 ("Finishing a game should disable hint and solve buttons and menu items")
    - Disable Hint and Solve action after puzzle was solved

Reviewers: #kde_games, aacid

Reviewed By: aacid

Subscribers: aacid, kde-games-devel

Differential Revision: https://phabricator.kde.org/D12912