src/gui/ksudokugame.cpp
@@ -575,14 +575,23 @@ void Game::deleteCageAt (int pos, SKGraph * g)
 	}
 }
 
+bool Game::allValuesSetAndUsable() const {
+	for (int i = 0; i < size(); i++) {
+		if (value(i) == 0) {
+			return false;
+		}
+	}
+
+	return true;
+}
+
 void Game::checkCompleted() {
 	if(!m_private || !m_private->puzzle->hasSolution()) return;
 
-	// Find cells that are empty and not in unusable areas (as in Samurai).
-	for(int i = 0; i < size(); i++)
-		if((value(i) == 0) && (solution(i) > 0))
-			return;
-	
+	if (!allValuesSetAndUsable()) {
+		return;
+	}
+
 	for(int i = 0; i < size(); i++) {
 		if(value(i) != solution(i)) {
 			m_private->emitCompleted(false, time(), m_private->hadHelp);
